--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
@@ -26,8 +26,18 @@
   }
 
   tr:hover {
-    box-shadow: 0 0 0 1px rgba($primary-color, .9);
+    box-shadow: 0 0 0 1px rgba($primary-color, 0.9);
     cursor: pointer;
+  }
+
+  tr.no-data {
+    border: none;
+    background-color: $grey-light;
+    align-items: center;
+    justify-content: center;
+    cursor: auto;
+    box-shadow: none !important;
+    border-top: 8px solid white;
   }
 }
 
