--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.scss
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.scss
@@ -28,6 +28,15 @@
   td.priority-column {
     padding: 4px 4px 4px 16px;
   }
+
+  tr.no-data {
+    border: none;
+    background-color: $grey-light;
+    align-items: center;
+    justify-content: center;
+    cursor: auto;
+    border-top: 8px solid white;
+  }
 }
 
 .high-priority {
