--- a/alcs-frontend/src/app/features/meeting/meeting.component.html
+++ b/alcs-frontend/src/app/features/meeting/meeting.component.html
@@ -1,4 +1,4 @@
 <div class="layout">
-  <h3>Panel Meetings</h3>
+  <h3>Review Meetings</h3>
   <app-meeting-overview></app-meeting-overview>
 </div>
