--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -28,6 +28,7 @@
               [boardCode]="board.code"
               [isFavorite]="board.isFavourite"
               [currentUserProfile]="currentUserProfile"
+              [disableTooltip]="true"
             ></app-favorite-button>
             <button mat-menu-item>
               {{ board.title }}
