--- a/alcs-frontend/src/app/features/application/decision/decision.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.html
@@ -5,92 +5,97 @@
 <section class="no-decisions" *ngIf="!decisions.length">
   <div>No Decisions</div>
 </section>
-<section class="decision" *ngFor="let decision of decisions; let i = index">
-  <div *ngIf="decisions.length - 1 !== i" class="recon-label">Recon</div>
-  <input hidden type="file" #file (change)="attachFile(decision.uuid, $event)" placeholder="Upload file" />
-  <div class="decision-menu">
-    <button (click)="file.click()" matTooltip="Attach Document" mat-icon-button>
-      <mat-icon>attach_file</mat-icon>
-    </button>
-    <button (click)="onEdit(decision)" matTooltip="Edit Decision" mat-icon-button><mat-icon>edit</mat-icon></button>
-    <button (click)="deleteDecision(decision.uuid)" matTooltip="Delete Decision" mat-icon-button>
-      <mat-icon>delete</mat-icon>
-    </button>
+<section class="decision-container" *ngFor="let decision of decisions; let i = index">
+  <div class="loading-overlay" *ngIf="decision.loading">
+    <mat-spinner></mat-spinner>
   </div>
-  <div class="body-large">Decision #{{ decisions.length - i }}</div>
-  <div class="decision-content">
-    <div>
-      <div class="subheading2">Decision Date</div>
-      {{ decision.date | momentFormat }}
+  <div class="decision">
+    <div *ngIf="decisions.length - 1 !== i" class="recon-label">Recon</div>
+    <input hidden type="file" #file (change)="attachFile(decision.uuid, $event)" placeholder="Upload file" />
+    <div class="decision-menu">
+      <button (click)="file.click()" matTooltip="Attach Document" mat-icon-button>
+        <mat-icon>attach_file</mat-icon>
+      </button>
+      <button (click)="onEdit(decision)" matTooltip="Edit Decision" mat-icon-button><mat-icon>edit</mat-icon></button>
+      <button (click)="deleteDecision(decision.uuid)" matTooltip="Delete Decision" mat-icon-button>
+        <mat-icon>delete</mat-icon>
+      </button>
     </div>
-    <div>
-      <div class="subheading2">Decision Outcome</div>
-      {{ decision.outcome.label }}
+    <div class="body-large">Decision #{{ decisions.length - i }}</div>
+    <div class="decision-content">
+      <div>
+        <div class="subheading2">Decision Date</div>
+        {{ decision.date | momentFormat }}
+      </div>
+      <div>
+        <div class="subheading2">Decision Outcome</div>
+        {{ decision.outcome.label }}
+      </div>
+      <div></div>
+      <div>
+        <div class="subheading2">Decision Maker</div>
+        {{ decision.decisionMaker ? decision.decisionMaker.label : '(Unset)' }}
+      </div>
+      <div>
+        <div *ngIf="decision.ceoCriterion" class="subheading2">CEO Criterion</div>
+        {{ decision.ceoCriterion?.label }}
+        <ng-container *ngIf="decision.isTimeExtension !== null">
+          {{ decision.isTimeExtension ? '- Time extension' : '- Other' }}
+        </ng-container>
+      </div>
+      <div></div>
+      <div *ngIf="decision.chairReviewRequired">
+        <div class="subheading2">Chair Review Date</div>
+        <span *ngIf="!decision.chairReviewDate">
+          <app-inline-datepicker (save)="onSaveChairReviewDate(decision.uuid, $event)"></app-inline-datepicker>
+        </span>
+        <span *ngIf="decision.chairReviewDate">{{ decision.chairReviewDate | momentFormat }}</span>
+      </div>
+      <div *ngIf="decision.chairReviewRequired">
+        <div class="subheading2">Chair Review Outcome</div>
+        <span *ngIf="decision.chairReviewOutcome !== null">{{
+          decision.chairReviewOutcome ? 'Reconsider' : 'Stay'
+        }}</span>
+        <span *ngIf="decision.chairReviewOutcome === null">(Unset)</span>
+      </div>
+      <div *ngIf="decision.chairReviewRequired"></div>
+      <div>
+        <div class="subheading2">Audit Date</div>
+        <span *ngIf="decision.auditDate">{{ decision.auditDate | momentFormat }}</span>
+        <span *ngIf="!decision.auditDate">
+          <app-inline-datepicker (save)="onSaveAuditDate(decision.uuid, $event)"></app-inline-datepicker>
+        </span>
+      </div>
     </div>
-    <div></div>
-    <div>
-      <div class="subheading2">Decision Maker</div>
-      {{ decision.decisionMaker ? decision.decisionMaker.label : '(Unset)' }}
-    </div>
-    <div>
-      <div *ngIf="decision.ceoCriterion" class="subheading2">CEO Criterion</div>
-      {{ decision.ceoCriterion?.label }}
-      <ng-container *ngIf="decision.isTimeExtension !== null">
-        {{ decision.isTimeExtension ? '- Time extension' : '- Other' }}
+    <div class="body-large">Documents</div>
+    <div class="decision-documents">
+      <div class="subheading2">File Name</div>
+      <div class="subheading2">File Upload Date</div>
+      <div class="subheading2">File Actions</div>
+      <div *ngIf="!decision.documents.length" class="no-files">No Documents</div>
+      <ng-container *ngFor="let document of decision.documents">
+        <div>
+          <a (click)="openFile(decision.uuid, document.uuid, document.fileName)">{{ document.fileName }}</a>
+        </div>
+        <div>{{ document.uploadedAt | momentFormat }}</div>
+        <div class="file-actions">
+          <button
+            matTooltip="Download File"
+            mat-icon-button
+            (click)="downloadFile(decision.uuid, document.uuid, document.fileName)"
+          >
+            <mat-icon>download</mat-icon>
+          </button>
+          <button
+            matTooltip="Delete File"
+            class="delete-file-icon"
+            mat-icon-button
+            (click)="deleteFile(decision.uuid, document.uuid, document.fileName)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
       </ng-container>
     </div>
-    <div></div>
-    <div *ngIf="decision.chairReviewRequired">
-      <div class="subheading2">Chair Review Date</div>
-      <span *ngIf="!decision.chairReviewDate">
-        <app-inline-datepicker (save)="onSaveChairReviewDate(decision.uuid, $event)"></app-inline-datepicker>
-      </span>
-      <span *ngIf="decision.chairReviewDate">{{ decision.chairReviewDate | momentFormat }}</span>
-    </div>
-    <div *ngIf="decision.chairReviewRequired">
-      <div class="subheading2">Chair Review Outcome</div>
-      <span *ngIf="decision.chairReviewOutcome !== null">{{
-        decision.chairReviewOutcome ? 'Reconsider' : 'Stay'
-      }}</span>
-      <span *ngIf="decision.chairReviewOutcome === null">(Unset)</span>
-    </div>
-    <div *ngIf="decision.chairReviewRequired"></div>
-    <div>
-      <div class="subheading2">Audit Date</div>
-      <span *ngIf="decision.auditDate">{{ decision.auditDate | momentFormat }}</span>
-      <span *ngIf="!decision.auditDate">
-        <app-inline-datepicker (save)="onSaveAuditDate(decision.uuid, $event)"></app-inline-datepicker>
-      </span>
-    </div>
-  </div>
-  <div class="body-large">Documents</div>
-  <div class="decision-documents">
-    <div class="subheading2">File Name</div>
-    <div class="subheading2">File Upload Date</div>
-    <div class="subheading2">File Actions</div>
-    <div *ngIf="!decision.documents.length" class="no-files">No Documents</div>
-    <ng-container *ngFor="let document of decision.documents">
-      <div>
-        <a (click)="openFile(decision.uuid, document.uuid, document.fileName)">{{ document.fileName }}</a>
-      </div>
-      <div>{{ document.uploadedAt | momentFormat }}</div>
-      <div class="file-actions">
-        <button
-          matTooltip="Download File"
-          mat-icon-button
-          (click)="downloadFile(decision.uuid, document.uuid, document.fileName)"
-        >
-          <mat-icon>download</mat-icon>
-        </button>
-        <button
-          matTooltip="Delete File"
-          class="delete-file-icon"
-          mat-icon-button
-          (click)="deleteFile(decision.uuid, document.uuid, document.fileName)"
-        >
-          <mat-icon>delete</mat-icon>
-        </button>
-      </div>
-    </ng-container>
   </div>
 </section>
