--- a/alcs-frontend/src/app/features/application/decision/decision.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.scss
@@ -8,11 +8,26 @@ section {
   margin-bottom: 64px;
 }
 
+.decision-container {
+  position: relative;
+}
+
 .decision {
   margin: 24px 0;
-  position: relative;
   padding: 48px 32px 32px 32px;
   box-shadow: 0 2px 8px 1px rgba(0, 0, 0, 0.25);
+}
+
+.loading-overlay {
+  position: absolute;
+  z-index: 2;
+  background-color: $grey;
+  opacity: 0.4;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .decision:last-child {
@@ -101,7 +116,6 @@ section {
   background-color: $grey-light;
   height: 72px;
 }
-
 
 .no-files {
   grid-column: 1/4;
