--- a/alcs-frontend/src/app/shared/card/card.component.scss
+++ b/alcs-frontend/src/app/shared/card/card.component.scss
@@ -57,7 +57,7 @@
 
 .type {
   margin: 8px 8px 0 0;
-  border-radius: 8px;
+  border-radius: 10px;
   width: fit-content;
   display: inline-flex;
   flex-direction: row;
@@ -66,6 +66,7 @@
   height: 24px;
   font-size: 11px;
   letter-spacing: 0.03em;
+  border: 3px solid;
 }
 
 .cdk-drag-placeholder {
