--- a/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.html
+++ b/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.html
@@ -1,3 +1,9 @@
-<button mat-icon-button [ngClass]="{ gold: isFavorite, 'favorite-btn': true }" (click)="onFavoriteClicked($event)">
+<button
+  [matTooltip]="isFavorite ? 'Unfavourite' : 'Favourite'"
+  [matTooltipDisabled]="disableTooltip"
+  mat-icon-button
+  [ngClass]="{ gold: isFavorite, 'favorite-btn': true }"
+  (click)="onFavoriteClicked($event)"
+>
   <mat-icon>star</mat-icon>
 </button>
