--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -14,7 +14,7 @@
         </div>
         <div *ngIf="hasRoles && !isCommissioner">
           <a routerLink="/meeting">
-            <button class="menu-item">Meetings</button>
+            <button class="menu-item">Schedule</button>
           </a>
         </div>
       </div>
