--- a/alcs-frontend/src/app/features/application/application.component.scss
+++ b/alcs-frontend/src/app/features/application/application.component.scss
@@ -14,74 +14,6 @@
   flex-direction: column;
 }
 
-.application-type {
-  margin-left: 16px;
-  border-radius: 10px;
-  padding: 4px 12px;
-  font-size: 11px;
-  letter-spacing: 0.01em;
-  font-weight: 700;
-  border: 3px;
-}
-
-.header {
-  padding: 16px 80px;
-  border-bottom: 1px solid #000;
-
-  .heading {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 16px;
-  }
-
-  .sub-heading {
-    margin-top: 16px;
-    margin-bottom: 8px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .subheading2 {
-    margin-bottom: 6px !important;
-  }
-}
-
-.dot {
-  height: 12px;
-  width: 12px;
-  margin-right: 8px;
-  background-color: $primary-color;
-  border-radius: 50%;
-  display: inline-block;
-  border: 2px solid #efefef;
-  box-shadow: 0px 0px 4px 2px rgba($primary-color, 0.3);
-}
-
-.dot.paused {
-  background-color: $error-color;
-  box-shadow: 0 0 4px 2px rgba($error-color, 0.3);
-}
-
-.time-tracking {
-  div {
-    margin-right: 16px;
-    display: flex;
-    align-items: center;
-  }
-
-  .icon {
-    margin-right: 4px;
-    height: 18px;
-    width: 18px;
-    font-size: 18px;
-  }
-}
-
-.inactive-timer {
-  opacity: 0.3;
-}
-
 .content {
   display: flex;
   flex-grow: 1;
@@ -101,7 +33,7 @@
   height: 100%;
 }
 
-.section {
+.nav-link {
   cursor: pointer;
   border-bottom: 1px solid;
 
