--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -3,7 +3,7 @@
   <table class="assigned-table">
     <thead>
       <th></th>
-      <th class="header">Application</th>
+      <th class="header">Cards</th>
       <th class="header">Active Days</th>
       <th class="header">Workflow Stage</th>
       <th class="header">Assignee</th>
