--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
@@ -19,10 +19,28 @@
     background-color: #efefef;
   }
 
+  td.labels {
+    min-width: 192px;
+  }
+
   td {
     margin: 0;
     border: 0;
     padding: 4px 28px 4px 4px;
+
+    .type {
+      margin: 8px 8px 0 0;
+      border-radius: 10px;
+      width: fit-content;
+      display: inline-flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 8px;
+      height: 24px;
+      font-size: 11px;
+      letter-spacing: 0.03em;
+      border: 3px solid;
+    }
   }
 
   tr:hover {
