--- a/alcs-frontend/src/app/shared/application-document/application-document.component.html
+++ b/alcs-frontend/src/app/shared/application-document/application-document.component.html
@@ -2,7 +2,7 @@
   <div>
     <h4>{{ title }}</h4>
   </div>
-  <div>
+  <div *ngIf="!readOnly">
     <input hidden type="file" #file (change)="uploadFile($event)" placeholder="Upload file" />
     <button mat-flat-button color="primary" [disabled]="isUploading" (click)="file.click()">
       <mat-spinner class="spinner" diameter="20" *ngIf="isUploading"></mat-spinner>
@@ -13,9 +13,9 @@
 
 <table mat-table [dataSource]="documents" class="mat-elevation-z4 width-100">
   <ng-container matColumnDef="fileName">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <th mat-header-cell *matHeaderCellDef>File Name</th>
     <td mat-cell *matCellDef="let element">
-      <a (click)="onDownload(element.uuid, element.fileName)">{{ element.fileName }}</a>
+      <a (click)="onOpen(element.uuid, element.fileName)">{{ element.fileName }}</a>
     </td>
   </ng-container>
 
@@ -33,12 +33,22 @@
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let element">
       <button
+        *ngIf="!readOnly"
         title="Delete"
         mat-icon-button
         class="action-btn delete"
         (click)="onDelete(element.uuid, element.fileName)"
       >
         <mat-icon>delete</mat-icon>
+      </button>
+      <button
+        *ngIf="readOnly"
+        title="Download"
+        mat-icon-button
+        class="action-btn"
+        (click)="onDownload(element.uuid, element.fileName)"
+      >
+        <mat-icon>download</mat-icon>
       </button>
     </td>
   </ng-container>
