Rename review package to evidentiary record

--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -7,5 +7,5 @@
   <app-decision-meeting [fileNumber]="fileNumber"></app-decision-meeting>
 </section>
 <section>
-  <app-document [fileNumber]="fileNumber" documentType="reviewDocument" title="Review Package"></app-document>
+  <app-document [fileNumber]="fileNumber" documentType="reviewDocument" title="Evidentiary Record"></app-document>
 </section>
