--- a/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
@@ -12,7 +12,8 @@
           class="center type-label"
           [ngStyle]="{
             backgroundColor: planningType.backgroundColor,
-            color: planningType.textColor
+            color: planningType.textColor,
+            borderColor: planningType.borderColor
           }"
         >
           {{ planningType.label }}
