--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
@@ -2,12 +2,14 @@
 
 .post-decision-header {
   margin: 24px 0 !important;
+  display: flex;
+  align-items: center;
+
   .icon {
     margin-left: 8px;
     height: 20px;
     width: 20px;
     font-size: 20px;
-    position: absolute;
   }
 }
 
@@ -57,9 +59,17 @@ section {
   top: 0;
   right: 0;
   height: 32px;
-  background: $accent-color;
+
   box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0px 4px 0px 10px;
+
+  &.recon {
+    background: $accent-color;
+  }
+
+  &.amendment {
+    background: $secondary-color-dark;
+  }
 
   button {
     color: $white;
