--- a/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.scss
@@ -23,8 +23,9 @@
   font-size: 11px;
   letter-spacing: 0.01em;
   font-weight: 700;
-  line-height: 24px;
+  line-height: 18px;
   vertical-align: middle;
+  border: 3px solid;
 }
 
 .card-title {
